--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/ramda": "^0.29.0",
+    "@types/ref-array-di": "^1.2.5",
+    "@types/ref-napi": "^3.0.7",
+    "@types/ref-struct-di": "^1.1.8",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "eslint": "^8.38.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -22,6 +25,9 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "ramda": "^0.29.0"
+    "ramda": "^0.29.0",
+    "ref-array-di": "^1.2.2",
+    "ref-napi": "^3.0.3",
+    "ref-struct-di": "^1.1.1"
   }
 }
