--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ranking",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/main/index.ts",
   "scripts": {
-    "start:dev:oop": "tsx watch src/oop/index.ts",
-    "start:dev:fp": "tsx watch src/fp/index.ts"
+    "start:dev": "tsx watch src/main/index.ts",
+    "test:unit": "vitest"
   },
   "author": "gabrielbsx",
   "license": "ISC",
@@ -24,7 +24,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^0.30.1"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
