--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^18.15.11",
+    "@types/pg": "^8.6.6",
     "@types/ramda": "^0.29.0",
     "@types/ref-array-di": "^1.2.5",
     "@types/ref-napi": "^3.0.7",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "pg": "^8.10.0",
     "ramda": "^0.29.0",
     "ref-array-di": "^1.2.2",
     "ref-napi": "^3.0.3",
